crates/talkbank-derive/tests/ui/fail_semantic_eq_on_union.stderr
error: SemanticEq cannot be derived for unions
 --> tests/ui/fail_semantic_eq_on_union.rs:4:1
  |
4 | / union BadUnion {
5 | |     a: i32,
6 | |     b: f32,
7 | | }
  | |_^

error: SemanticDiff cannot be derived for unions
 --> tests/ui/fail_semantic_eq_on_union.rs:4:1
  |
4 | / union BadUnion {
5 | |     a: i32,
6 | |     b: f32,
7 | | }
  | |_^
