crates/talkbank-derive/tests/ui/fail_semantic_eq_on_union.rs
use talkbank_derive::SemanticEq;

#[derive(SemanticEq)]
union BadUnion {
    a: i32,
    b: f32,
}

fn main() {}
